# birthday-wisher

./: .env.sample  .gitignore  README.md  birthday_wisher  pyproject.toml  requirements.txt  run_app.sh  runn_app.sh
conf/: celery.py  settings.py  urls.py
customer/: customers.json  models.py  tasks.py
customer/apis/: serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py
